migrated to javi compiler
enable jdk 11 bytecode for all projects (move from java 8)